--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "moment": "^2.29.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.0",
     "rxjs": "~7.4.0",
