--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,9 @@
       "@angular-concepts-nx/reusable-forms-1/feature": [
         "libs/reusable-forms-1/feature/src/index.ts"
       ],
+      "@angular-concepts-nx/rxjs-practice/feature": [
+        "libs/rxjs-practice/feature/src/index.ts"
+      ],
       "@angular-concepts-nx/structural-directives/feature": [
         "libs/structural-directives/feature/src/index.ts"
       ]
